feat(domain): 为BaseEntity新增索引并启用MongoDB自动索引创建
- 在BaseEntity中对createTime、updateTime、createBy和updateBy字段添加索引注解
- 在application-dev.yml中开启MongoDB自动索引创建配置
- 提升数据库查询性能和索引管理自动化能力